# Meeting2Document

./: .gitignore  01_DETAILED_TECHNICAL_DOCUMENTATION.md  02_HUMAN_READABLE_OVERVIEW.md  03_RECREATION_PROMPT.md  04_STRENGTHS_WEAKNESSES_AND_INDUSTRY_STANDARDS.md  IMPLEMENTATION_PLAN.md  README.md  user_flow_diagram.csv  user_flow_diagram.drawio
Backend/: .env.example  README.md  alembic.ini  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  tsconfig.json
Backend/.sisyphus/: boulder.json
Backend/.sisyphus/notepads/google-docs-export-fix/: BLOCKER.md  COMPLETION_SUMMARY.md  README.md  decisions.md  issues.md  (+2 more)
Backend/.sisyphus/plans/: google-docs-export-fix.md
Backend/alembic/: env.py
Backend/alembic/versions/: 5e13d4dc979d_add_timezone_to_datetime_columns.py  a1b2c3d4e5f6_add_drive_folders_jsonb.py  ac91e5366dd8_simplify_project_status_enum.py
Backend/app/: config.py  main.py
Backend/app/api/: __init__.py  auth.py  deps.py  documents.py  drive.py  jobs.py  projects.py
Backend/app/core/: datetime_utils.py  exceptions.py  logging.py  security.py
Backend/app/db/: database.py
Backend/app/models/: __init__.py  document.py  job.py  project.py  user.py
Backend/app/schemas/: __init__.py  auth.py  base.py  document.py  drive.py  job.py  project.py  user.py
Backend/app/services/: __init__.py  drive_service.py
Backend/convex/: auth.ts  documentGenerations.ts  documents.ts  http.ts  jobs.ts  keyIdeas.ts  projects.ts  schema.ts  sourceContent.ts  transcripts.ts  users.ts
Backend/convex/_generated/: api.d.ts
Backend/convex/actions/: assembly.ts  assets.ts  contentExtraction.ts  drive.ts  export.ts  extraction.ts  gcs.ts  generation.ts  synthesis.ts  transcription.ts
Backend/convex/lib/: logger.ts  promptBuilder.ts  prompts.ts  redirectPolicy.ts  sectionSchema.ts  templateLoader.ts
Backend/convex/templates/: _sample.template.json  zuora-sdd.template.json
Backend/workers/: __init__.py  celery_app.py
Backend/workers/tasks/: process_job.py
(+44 files in other folders)
